Fixed move down in reducer :stuck_out_tongue:

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,3 +1,5 @@
 #board .konvajs-content {
   border: 1px solid green;
+  position: absolute;
+  left: 10%;
 }
